// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRefMap snapshots > full map (serialized to plain object) 1`] = `
{
  "Error": {
    "kind": "Schema",
    "name": "Error",
    "properties": [
      {
        "kind": "Property",
        "name": "code",
        "required": true,
        "schema": {
          "kind": "Schema",
          "type": "integer",
        },
      },
      {
        "kind": "Property",
        "name": "message",
        "required": true,
        "schema": {
          "kind": "Schema",
          "type": "string",
        },
      },
    ],
    "type": "object",
  },
  "FullPet": {
    "kind": "Schema",
    "members": [
      {
        "kind": "Schema",
        "ref": "Pet",
        "type": "ref",
      },
      {
        "kind": "Schema",
        "properties": [
          {
            "kind": "Property",
            "name": "createdAt",
            "required": false,
            "schema": {
              "kind": "Schema",
              "type": "datetime",
            },
          },
        ],
        "type": "object",
      },
    ],
    "name": "FullPet",
    "type": "intersection",
  },
  "NewPet": {
    "kind": "Schema",
    "name": "NewPet",
    "properties": [
      {
        "kind": "Property",
        "name": "name",
        "required": true,
        "schema": {
          "kind": "Schema",
          "type": "string",
        },
      },
    ],
    "type": "object",
  },
  "Pet": {
    "kind": "Schema",
    "name": "Pet",
    "properties": [
      {
        "kind": "Property",
        "name": "id",
        "required": true,
        "schema": {
          "kind": "Schema",
          "type": "integer",
        },
      },
      {
        "kind": "Property",
        "name": "name",
        "required": true,
        "schema": {
          "kind": "Schema",
          "type": "string",
        },
      },
    ],
    "type": "object",
  },
  "PetList": {
    "items": [
      {
        "kind": "Schema",
        "ref": "Pet",
        "type": "ref",
      },
    ],
    "kind": "Schema",
    "name": "PetList",
    "type": "array",
  },
  "PetOrError": {
    "kind": "Schema",
    "members": [
      {
        "kind": "Schema",
        "ref": "Pet",
        "type": "ref",
      },
      {
        "kind": "Schema",
        "ref": "Error",
        "type": "ref",
      },
    ],
    "name": "PetOrError",
    "type": "union",
  },
}
`;

exports[`buildRefMap snapshots > resolved schema 'FullPet' 1`] = `
{
  "kind": "Schema",
  "members": [
    {
      "kind": "Schema",
      "ref": "Pet",
      "type": "ref",
    },
    {
      "kind": "Schema",
      "properties": [
        {
          "kind": "Property",
          "name": "createdAt",
          "required": false,
          "schema": {
            "kind": "Schema",
            "type": "datetime",
          },
        },
      ],
      "type": "object",
    },
  ],
  "name": "FullPet",
  "type": "intersection",
}
`;

exports[`buildRefMap snapshots > resolved schema 'Pet' 1`] = `
{
  "kind": "Schema",
  "name": "Pet",
  "properties": [
    {
      "kind": "Property",
      "name": "id",
      "required": true,
      "schema": {
        "kind": "Schema",
        "type": "integer",
      },
    },
    {
      "kind": "Property",
      "name": "name",
      "required": true,
      "schema": {
        "kind": "Schema",
        "type": "string",
      },
    },
  ],
  "type": "object",
}
`;

exports[`buildRefMap snapshots > resolved schema 'PetList' 1`] = `
{
  "items": [
    {
      "kind": "Schema",
      "ref": "Pet",
      "type": "ref",
    },
  ],
  "kind": "Schema",
  "name": "PetList",
  "type": "array",
}
`;

exports[`buildRefMap snapshots > resolved schema 'PetOrError' 1`] = `
{
  "kind": "Schema",
  "members": [
    {
      "kind": "Schema",
      "ref": "Pet",
      "type": "ref",
    },
    {
      "kind": "Schema",
      "ref": "Error",
      "type": "ref",
    },
  ],
  "name": "PetOrError",
  "type": "union",
}
`;
